# event-contract-guard

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
contracts/: retail.orders.v1.yaml
docs/: architecture.mmd
helm/event-contract-guard/: Chart.yaml  values.yaml
helm/event-contract-guard/templates/: _helpers.tpl  deployment.yaml  service.yaml
src/event_contract_guard/: __init__.py  api.py  cli.py  compatibility.py  contracts.py  processor.py  validation.py
tests/: test_api.py  test_compatibility.py  test_processor.py
